Fix jumping dropdown

--- a/_dev/src/assets/scss/layouts/_form.scss
+++ b/_dev/src/assets/scss/layouts/_form.scss
@@ -14,6 +14,10 @@
   }
 }
 
+.ps-dropdown {
+  transition: 0s transform;
+}
+
 .psxmarketingwithgoogle-dropdown {
   padding: 1px 0;
 
